--- a/package.json
+++ b/package.json
@@ -1,18 +1,9 @@
 {
   "name": "parsegraph-checkglerror",
-  "version": "1.5.1-dev",
+  "version": "1.5.1",
   "description": "checkglerror",
-  "main": "dist/parsegraph-checkglerror.js",
-  "types": "dist/parsegraph-checkglerror.d.ts",
-  "scripts": {
-    "coverage": "nyc npm run test",
-    "test": "cross-env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha",
-    "autotest": "cross-env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --watch",
-    "demo": "node demo/demo.js",
-    "autobuild": "webpack --watch --config webpack.config.js",
-    "build": "webpack --config webpack.config.js",
-    "build-prod": "NODE_ENV=production webpack --config webpack.prod.js"
-  },
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/parsegraph/checkglerror.git"
@@ -23,36 +14,24 @@
     "url": "https://github.com/parsegraph/checkglerror/issues"
   },
   "homepage": "https://github.com/parsegraph/checkglerror#readme",
-  "nyc": {
-    "extends": "@istanbuljs/nyc-config-babel",
-    "reporter": [
-      "html"
-    ],
-    "exclude": [
-      "test/**.js",
-      "dist/**.js"
-    ],
-    "reportDir": "dist/coverage"
-  },
-  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.17.3",
-    "@babel/core": "^7.17.4",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.17.0",
     "@types/chai": "^4.3.0",
-    "@types/node": "^17.0.18",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@types/node": "^17.0.19",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "chai": "^4.3.6",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "jest": "^27.5.1",
     "jsdom": "^19.0.0",
     "jsdom-global": "^3.0.2",
@@ -62,9 +41,9 @@
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
-    "typedoc": "^0.22.11",
+    "typedoc": "^0.22.12",
     "typescript": "^4.5.5",
-    "webpack": "^5.69.0",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   }
 }
