--- a/Makefile.microproject
+++ b/Makefile.microproject
@@ -22,6 +22,14 @@ CONFIG_FILES = \
 
 all: build lint test coverage doc
 
+show-runs:
+	xdg-open https://github.com/parsegraph/$(DIST_NAME)/actions
+.PHONY: show-runs
+
+show-npm:
+	xdg-open https://npmjs.com/parsegraph-$(DIST_NAME)
+.PHONY: show-npm
+
 build: $(DEST_LIB)
 .PHONY: build
 
@@ -48,7 +56,7 @@ stop-tmux:
 	tmuxify stop
 .PHONY: stop-tmux
 
-RUN_TEST=npx jest --env=jsdom
+RUN_TEST=npx jest --env=jsdom --no-cache
 
 check:
 	$(RUN_TEST)
